# tinkoff-ticker

./: .gitmodules  Cargo.toml  investAPI
generator/: Cargo.toml
generator/src/: main.rs
src/: draw.rs  main.rs  tcs.rs
src/tinkoff_api/: mod.rs
src/tinkoff_api/apis/: configuration.rs  market_api.rs  mod.rs  operations_api.rs  orders_api.rs  portfolio_api.rs  sandbox_api.rs  user_api.rs
src/tinkoff_api/models/: broker_account_type.rs  candle.rs  candle_resolution.rs  candles.rs  candles_response.rs  currencies.rs  currency.rs  currency_position.rs  empty.rs  error.rs  error_payload.rs  instrument_type.rs  limit_order_request.rs  limit_order_response.rs  market_instrument.rs  market_instrument_list.rs  market_instrument_list_response.rs  market_instrument_response.rs  market_order_request.rs  market_order_response.rs  mod.rs  money_amount.rs  operation.rs  operation_status.rs  operation_trade.rs  operation_type.rs  operation_type_with_commission.rs  operations.rs  operations_response.rs  order.rs  order_response.rs  order_status.rs  order_type.rs  orderbook.rs  orderbook_response.rs  orders_response.rs  placed_limit_order.rs  placed_market_order.rs  portfolio.rs  portfolio_currencies_response.rs  (+14 more)
