[package]
name = "ticker-tinkoff"
version = "0.1.0"
authors = ["Vlad Bulgakov <stick.qwe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
url = "^2.2"
tui = "0.14"
termion = "1.5"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "default-tls"]